# Hackathon-Project

./: .dockerignore  Dockerfile  README.md  package.json  railway.toml  requirements.txt  start.sh  vercel.json
app/: config.py  main.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/services/: emotion_detection.py
frontend/: .env  .env.production  index.html  package-lock.json  package.json
frontend/public/models/emotion-model/: model.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioVisualizer.tsx  Auth.tsx  CallExport.tsx  CallHistory.tsx  CallSharing.tsx  ChatInterface.tsx  Layout.tsx  Navbar.tsx  Sidebar.tsx  UserManagement.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAudioCapture.ts
frontend/src/pages/: ActiveCalls.tsx  Analytics.tsx  Chatbot.tsx  Dashboard.tsx  EmotionReport.tsx  Landing.tsx  Settings.tsx  Team.tsx
frontend/src/services/: AudioService.ts  FirebaseService.ts  GeminiService.ts
frontend/src/types/: auth.ts
